# Cherno_OpenGL

./: CMakeLists.txt  IndexBuffer.cpp  IndexBuffer.h  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
resources/shaders/: Basic.shader
